--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,21 @@
+# Byte-compiled / optimized / DLL files
 __pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+.Python
+build/
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
 test/workspace.code-workspace
-clusters.csv
-tests/test_*_clusters.csv
+clusters.*
+tests/test_*_clusters.*
