--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,47 @@
-
+angelcommunity==2.0.0
+bimlpa==0.1.2
+cdlib==0.4.0
+certifi==2024.12.14
+charset-normalizer==3.4.0
+contourpy==1.3.1
+cycler==0.12.1
+decorator==5.1.1
+demon==2.0.6
+dynetx==0.3.2
+eva-lcd==0.1.1
+fonttools==4.55.3
+future==1.0.0
+idna==3.10
+igraph==0.11.8
+joblib==1.4.2
+kiwisolver==1.4.7
+Levenshtein==0.26.1
+matplotlib==3.10.0
+networkx==3.4.2
+numpy==2.2.0
+packaging==24.2
+pandas==2.2.3
+pillow==11.0.0
+platformdirs==4.3.6
+plotly==5.24.1
+pooch==1.8.2
+PuLP==2.9.0
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
+python-igraph==0.11.8
+python-Levenshtein==0.26.1
+python-louvain==0.16
+pytz==2024.2
+RapidFuzz==3.11.0
+requests==2.32.3
+scikit-learn==1.6.0
+scipy==1.14.1
+seaborn==0.13.2
+six==1.17.0
+tenacity==9.0.0
+texttable==1.7.0
+threadpoolctl==3.5.0
+thresholdclustering==1.1
+tqdm==4.67.1
+tzdata==2024.2
+urllib3==2.2.3
